--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,43 +1,32 @@
 <!DOCTYPE html>
 
-
 <html lang="en">
-
-
   <head>
-
-
     <meta charset="UTF-8" />
-
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
 
     <title>Document</title>
 
-
+    <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
 
-
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-
 
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400&family=Poppins:wght@100;400&display=swap"
       rel="stylesheet"
     />
 
+    <!-- ICONS -->
 
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@48,400,0,0"
+    />
   </head>
 
-
-  <body>
-
-
-  </body>
-
-
+  <body></body>
 </html>
